added correct rng usage

--- a/src/testing.ipynb
+++ b/src/testing.ipynb
@@ -4023,98 +4023,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import jax\n"
+    "from jax import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6531793401332403\n"
-     ]
-    }
-   ],
-   "source": [
-    "import random\n",
-    "\n",
-    "print(random.randint(0, 1e16))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4245162872652295"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "random.randint(0, 1e16)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "key() missing 1 required positional argument: 'seed'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mjax\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrandom\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mkey\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: key() missing 1 required positional argument: 'seed'"
-     ]
-    }
-   ],
-   "source": [
-    "jax.random.key()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Array((), dtype=key<fry>) overlaying:\n",
-       "[         0 1874919424]"
+       "[ 0 69]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "key = jax.random.key(10000000000000000)\n",
+    "key = random.key(69)\n",
     "key"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -4122,55 +4062,75 @@
      "output_type": "stream",
      "text": [
       "Array((), dtype=key<fry>) overlaying:\n",
-      "[3134548294 3733159049] Array((), dtype=key<fry>) overlaying:\n",
-      "[3746501087  894150801] Array((), dtype=key<fry>) overlaying:\n",
-      "[ 801545058 2363201431]\n"
+      "[3746304321 1047182288]\n",
+      "Array((), dtype=key<fry>) overlaying:\n",
+      "[3745723190 1458479275]\n"
      ]
     }
    ],
    "source": [
-    "key, noise_rng, test_rng = jax.random.split(key, num=3)\n",
-    "print(key, noise_rng, test_rng)"
+    "init_rng, train_rng = random.split(key, num=2)\n",
+    "print(init_rng)\n",
+    "print(train_rng)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Array((), dtype=key<fry>) overlaying:\n",
-       "[2465931498 3679230171]"
+       "Array([ 0, 69], dtype=uint32)"
       ]
      },
-     "execution_count": 119,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Array((), dtype=key<fry>) overlaying:\n",
-       "[255383827 267815257]"
-      ]
-     },
-     "execution_count": 120,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "noise_rng"
+    "key = random.PRNGKey(69)\n",
+    "key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3746304321 1047182288]\n",
+      "[3745723190 1458479275]\n"
+     ]
+    }
+   ],
+   "source": [
+    "init_rng, train_rng = random.split(key, num=2)\n",
+    "print(init_rng)\n",
+    "print(train_rng)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2814327745 2391496948] [1174026990 2603783245] [2720540706 1040765532]\n"
+     ]
+    }
+   ],
+   "source": [
+    "key, noise_rng, test_rng = random.split(key, num=3)\n",
+    "print(key, noise_rng, test_rng)"
    ]
   },
   {
